--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,5 +9,9 @@ block main
         form.form2(action='./', method='post')
             input(type='text', required)
             button(type='submit') Enviar
-        img(src='/src/assets/gatos/cat-blue.jpg', alt='')
-        img(src='/images/orange-cat.jpg', alt='')
+        img(src='/images/cats/cat-blue.webp', alt='')
+        img(src='/images/dogs/dog.webp', alt='')
+        img(src='/images/cats/cat.svg', alt='')
+        img(src='/images/dogs/bulldog.svg', alt='')
+        +svgIcon('blog')
+        +svgIcon('car')
