--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,7 +9,7 @@ block main
         form.form2(action='./', method='post')
             input(type='text', required)
             button(type='submit') Enviar
-        img(src='/images/cats/cat-blue.webp', alt='')
+        img(src='/src/assets/images/cats/cat-blue.jpg', alt='')
         img(src='/images/dogs/dog.webp', alt='')
         img(src='/images/cats/cat.svg', alt='')
         img(src='/images/dogs/bulldog.svg', alt='')
