--- a/src/layouts/general.pug
+++ b/src/layouts/general.pug
@@ -9,4 +9,4 @@ html(lang='en')
     body 
         include ../components/header
         block main
-        script(type='module', src='/src/scripts/scripts.js') 
+        script(type='module', src='/src/scripts/main.js') 
