--- a/src/pages/blog.pug
+++ b/src/pages/blog.pug
@@ -3,4 +3,4 @@ extends ../layouts/general
 block main
     main
         h1 Blog
-        img(src='/src/assets/images/cats/cat-blue.jpg', alt='')
+        img(src='/src/assets/images/cats/cat-blue.webp', alt='')
