--- a/src/components/svgIcon.pug
+++ b/src/components/svgIcon.pug
@@ -2,4 +2,4 @@ mixin svgIcon(icon, clas, hidden='true', title)
     svg.o-icon(class=clas, aria-hidden=(hidden == 'true' ? 'true' : false), focusable='false', role='img')
         if title
             title=title 
-        use(href='/images/icons/icons.svg#icon-'+icon)
+        use(href='/src/assets/images/icons.svg#icon-'+icon)
