--- a/src/styles/tools/_font-face.scss
+++ b/src/styles/tools/_font-face.scss
@@ -1,7 +1,7 @@
 @mixin font-face($font-name, $font-file, $font-weight: normal, $font-style: normal) {
     @font-face {
         font-family: $font-name;
-        src: url('/fonts/'+$font-file+'.woff2') format('woff2');
+        src: url('/src/assets/fonts/'+$font-file+'.woff2') format('woff2');
         font-weight: $font-weight;
         font-style: $font-style;
         font-display: swap;
