Add pug to php on build function

--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -7,3 +7,4 @@ header.c-header
                 li.c-header-nav__li: a.c-header-nav__link(href='/blog.html') Blog
                 li.c-header-nav__li: a.c-header-nav__link(href='/blog/blog-article.html') Blog article
                 li.c-header-nav__li: a.c-header-nav__link(href='/contact.html') Contact
+        img(src='/src/assets/images/cats/cat-blue.webp', alt='')
